--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_register_user">6.1. Register User</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/register%20diagram.png" alt="register diagram" width="475" height="328">
+<img src="./images/register%20diagram.png" alt="register diagram" width="448" height="335">
 </div>
 </div>
 </div>
@@ -1453,7 +1453,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_user_login_pod">6.2. User Login Pod</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/login%20diagram.png" alt="login diagram" width="578" height="399">
+<img src="./images/login%20diagram.png" alt="login diagram" width="546" height="409">
 </div>
 </div>
 </div>
@@ -1461,7 +1461,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_visualize_map">6.3. Visualize map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Map%20diagram.png" alt="Map diagram" width="661" height="415">
+<img src="./images/Map%20diagram.png" alt="Map diagram" width="628" height="426">
 </div>
 </div>
 </div>
@@ -1469,7 +1469,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_friends_list">6.4. Friends list</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="599" height="357">
+<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="555" height="365">
 </div>
 </div>
 </div>
@@ -1477,7 +1477,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_add_places_to_map">6.5. Add places to map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="686" height="357">
+<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="650" height="365">
 </div>
 </div>
 </div>
@@ -1485,7 +1485,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_reviews">6.6. Reviews</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="799" height="328">
+<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="742" height="335">
 </div>
 </div>
 </div>
@@ -1493,7 +1493,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_filter_map">6.7. Filter map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="917" height="415">
+<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="851" height="426">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -1747,11 +1747,15 @@ on this list.</p>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">User</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">User who uses the application .</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">User who uses the application. Can be friend with other users.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Professional User</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Special user who runs the POD for an actual place as: bar, shop, bar&#8230;&#8203;</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Post</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A comment, score&#8230;&#8203; made by a user related to a place.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Places</p></td>
@@ -2219,7 +2223,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-02 11:06:53 +0100
+Last updated 2023-02-12 19:28:40 +0100
 </div>
 </div>
 </body>
