--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@ The title of the table is the name of your system, the three columns contain the
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Database</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Stores user&#8217;s logging information.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Stores static places, centralized.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">API</p></td>
@@ -1108,7 +1108,7 @@ together with a mapping table showing the relationships between channels and inp
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MongoDB</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Used for store user&#8217;s logging info</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Used for store some aditional data.</p></td>
 </tr>
 </tbody>
 </table>
@@ -1174,10 +1174,10 @@ Refer to details in the following sections.</p>
 <p><strong>Node js</strong>: is a Javascript execution environment controlled by events, what makes it light and efficient. It is also a nice option for reactive web apps because it&#8217;s able to provide a big amount of simultaneous conections with high performance (big scalability).</p>
 </li>
 <li>
-<p><strong>Javascript</strong>: is an interpreted programming language based on prototypes, imperative and dynamic. We will use it mainly for frontend.</p>
+<p><strong>Javascript</strong>: is an interpreted programming language based on prototypes, imperative and dynamic. We will use it on both frontend and backend.</p>
 </li>
 <li>
-<p><strong>CSS</strong>: is a graphic programming language oriented to define the rpesentation of a document. We will use it as part of the frontend of the app.</p>
+<p><strong>CSS</strong>: is a graphic programming language oriented to define the repesentation of a document. We will use it as part of the frontend of the app.</p>
 </li>
 <li>
 <p><strong>Docker</strong>: is a software platform that allows to create, try and implement new apps easily and fast. We will use it for the fast deployment of our web application.</p>
@@ -1201,7 +1201,7 @@ Refer to details in the following sections.</p>
 <p>React, CSS, Javascript and NodeJS were chosen to reach a good level of usability and accesibility.</p>
 </li>
 <li>
-<p>MongoDB, SOLID, docker and some libraries o9f NodeJS will provide the privacy, integrity and security of the web app.</p>
+<p>MongoDB, SOLID, docker and some libraries of NodeJS will provide the privacy, integrity and security of the web app.</p>
 </li>
 <li>
 <p>Github was chosen for version control and organization and communication between the team.</p>
@@ -1450,7 +1450,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_register_user">6.1. Register User</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/register%20diagram.png" alt="register diagram" width="448" height="335">
+<img src="./images/register%20diagram.png" alt="register diagram" width="337" height="305">
 </div>
 </div>
 </div>
@@ -1458,7 +1458,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_user_login_pod">6.2. User Login Pod</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/login%20diagram.png" alt="login diagram" width="546" height="409">
+<img src="./images/login%20diagram.png" alt="login diagram" width="491" height="378">
 </div>
 </div>
 </div>
@@ -2110,6 +2110,16 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 </div>
 <div class="sect2">
 <h3 id="_technical_debt">11.2. Technical Debt</h3>
+<div class="paragraph">
+<p>This is a list of identified technical debts, ordered by priority (1 is the highest priority).</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>The frontend application unsolved package vulnerabilities, forcing us to use the '--force' when we need to install.</p>
+</li>
+</ol>
+</div>
 <div style="page-break-after: always;"></div>
 </div>
 </div>
@@ -2228,7 +2238,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-05 09:01:18 +0100
+Last updated 2023-03-15 17:24:15 +0100
 </div>
 </div>
 </body>
